<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".DogProfileActivity"
    android:background="@color/application_background" >


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/application_background">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_perfil"
            android:id="@+id/dogPerfilButton"
            android:background="@color/selected_top_menu"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dating"
            android:id="@+id/datingButton"
            android:background="@color/no_selected_top_menu"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config"
            android:id="@+id/configButton"
            android:background="@color/no_selected_top_menu"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:textColor="#FFFFFF" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/sulhouette"
            android:layout_span="2"
            android:layout_gravity="center_horizontal"/>


    </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_5p"
                    android:text="@string/profile_dog_name"
                    android:textSize="@dimen/create_profile_text_size"
                    android:id="@+id/dogNameTextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_5p"
                    android:text="Nombre criador"
                    android:textSize="@dimen/create_profile_text_size"
                    android:id="@+id/dogNameTextView2" />
            </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_5p"
            android:text="Correo"
            android:textSize="@dimen/create_profile_text_size"
            android:id="@+id/correoTextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_5p"
            android:text="Direccion"
            android:textSize="@dimen/create_profile_text_size"
            android:id="@+id/direccionTextView" />
    </TableRow>


</TableLayout>
